# AdventOfCode2020

./: .gitignore  Cargo.toml  new_day.sh  run.zsh
.lynx/: lynx.cfg
inputs/: day9.txt
src/: aoc_day.rs  command.rs  common.rs  exec.rs  main.rs  web.rs
templates/: day.rs.tpl
test_inputs/: day-disabled-14.txt  day1.txt  day10-1.txt  day10.txt  day11.txt  day12.txt  day13-1.txt  day13-5.txt  day13.txt  day14-1.txt  day15.txt  day16.txt  day17.txt  day18.txt  day19-1.txt  day19.txt  day2.txt  day20.txt  day21.txt  day22.txt  day23.txt  day3.txt  day4-1.txt  day4-2.txt  day5-0.txt  day5-1.txt  day6.txt  day7-1.txt  day7-2.txt  day7.txt  day8.txt  day9.txt  dayno11-0.txt
web/: cookie  lynx.cfg  scroll.script
web/elinks/: cookies  globhist
